--- a/docs/styles.css
+++ b/docs/styles.css
@@ -13,6 +13,14 @@
   --vocs-color_background: #232225;
 }
 
+.vocs_H1 {
+  font-size: 4em;
+}
+
+Footer {
+  color: var(--vocs-color_text4);
+}
+
 .LogoSmall {
   width: 50px;
   height: 50px;
